--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -3,6 +3,7 @@
     font-family: Arial, Helvetica, sans-serif;
     outline: none;
     border: none;
+    overflow-x: hidden;
     margin: 0px;
     padding: 0px;
     text-decoration: none;
