--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -3,7 +3,8 @@
     grid-template-columns: 15% 35% 1fr 10%;
     grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
     width: 100%;
-    height: 100vh;
+    height: 60vh;
+    min-height: 400px;
 }
 
 .header > h2 {
