--- a/src/styles/ServiceFeature.css
+++ b/src/styles/ServiceFeature.css
@@ -3,7 +3,7 @@
     flex-flow: column nowrap;
     align-items: flex-start;
     justify-content: space-between;
-    height: 100%;
+    height: 180px;
     padding: 0px 10%;
 }
 
